syntax.txt
symbol			:= symbol_head + symbol_tail
symbol_tail		:= '.' + symbol_tail_nodot
			 | epsilon
symbol_tail_nodot	:= symbol
symbol_head		:= alpha_numeric + symbol_head_tail
symbol_head_tail	:= '(' + parameter_list + ')'
			 | epsilon
parameter_list		:= parameter_list
			 | char + parameter_list
			 | epsilon

// parameter_list		:= expression + parameter_list_tail
// 			 | epsilon
// parameter_list_tail	:= ',' + parameter_list

expr		:= compare_expr + expr_tail
expr_tail	:= '||' + expr
		 | '&&' + expr
		 | epsilon

cmp_expr		:= cmp_expr_operand + cmp_expr_tail
cmp_expr_tail		:= '==' + cmp_expr_operand
			 | '!=' + cmp_expr_operand
			 | '>'  + cmp_expr_operand
			 | '>=' + cmp_expr_operand
			 | '<'  + cmp_expr_operand
			 | '<=' + cmp_expr_operand
			 | epsilon

cmp_expr_operand	:= '!' + cmp_expr_operand
			 | plus_minus_expr
			 | true
			 | false

atomic_expr		:= '(' + expr + ')'
			 | symbol
			 | string
			 | number
negable_atomic_expr	:= '+' + atomic_expr
			 | '-' + atomic_expr
			 | atomic_expr

pot_expr		:= atomic_expr + pot_expr_tail
pot_expr_tail		:= '^' + negable_atomic_expr
			 | epsilon
negable_pot_expr	:= '+' + pot_expr
			:= '-' + pot_expr
			 | pot_expr

muldivmod_expr		:= negable_pot_expr + muldivmod_expr_tail
muldivmod_expr_tail	:= '*' + negable_pot_expr
			 | '/' + negable_pot_expr
			 | '%' + negable_pot_expr
			 | epsilon

plus_minus_expr		:= muldivmod_expr + plus_minus_expr_tail
plus_minus_expr_tail	:= '+' muldivmod_expr
			 | '-' muldivmod_expr
			 | epsilon
